--- a/.github/workflows/slsa3-build.yaml
+++ b/.github/workflows/slsa3-build.yaml
@@ -1,3 +1,5 @@
+on: workflow_dispatch
+
 jobs:
   # This step builds our artifacts, uploads them to the workflow run, and
   # outputs their digest.
