--- a/.github/workflows/slsa3-build.yaml
+++ b/.github/workflows/slsa3-build.yaml
@@ -9,6 +9,12 @@ jobs:
       hashes: ${{ steps.hash.outputs.hashes }}
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
+      - name: Set up JDK 11
+        with:
+          java-version: 11
+          distribution: temurin
+
       - name: Build gradle artifacts
         id: build
         run: |
