--- a/.github/workflows/slsa3-build.yaml
+++ b/.github/workflows/slsa3-build.yaml
@@ -43,11 +43,11 @@ jobs:
       actions: read
       id-token: write
       contents: write
-    uses: slsa-framework/slsa-github-generator/.github/workflows/generator_generic_slsa3.yml@main
+    uses: slsa-framework/slsa-github-generator/.github/workflows/generator_generic_slsa3.yml@v1.1.1
     with:
       base64-subjects: "${{ needs.build.outputs.hashes }}"
-      # Upload provenance to a new release
-      upload-assets: false
+#       # Upload provenance to a new release
+#       upload-assets: false
 
   # This step uploads our artifacts to the tagged GitHub release.
   release:
