--- a/.github/workflows/slsa3-build.yaml
+++ b/.github/workflows/slsa3-build.yaml
@@ -24,7 +24,7 @@ jobs:
         shell: bash
         id: hash
         run: |
-          echo "::set-output name=hashes::$(sha256sum ./build/libs | base64 -w0)"
+          echo "::set-output name=hashes::$(sha256sum ./build/libs/* | base64 -w0)"
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@3cea5372237819ed00197afe530f5a7ea3e805c8 # tag=v3.1.0
