--- a/pom.xml
+++ b/pom.xml
@@ -10,5 +10,34 @@
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>11</maven.compiler.target>
   </properties>
+  
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <executions>
+				  <execution>
+					  <id>attach-javadocs</id>
+					  <goals>
+						  <goal>jar</goal>
+					  </goals>
+				  </execution>
+			  </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-source-plugin</artifactId>
+        <executions>
+				  <execution>
+					  <id>attach-source</id>
+					  <goals>
+						  <goal>jar</goal>
+					  </goals>
+				  </execution>
+			  </executions>
+      </plugin>
+    </plugins>
+  </build>
  
 </project>
