--- a/.github/workflows/tag-release.yaml
+++ b/.github/workflows/tag-release.yaml
@@ -13,6 +13,7 @@ jobs:
   tag:
     needs: [ci]
     runs-on: ubuntu-latest
+    steps:
     - name: Check input
       run: |
         if [[ ! "${{ github.event.inputs.version }}" =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
