--- a/.github/workflows/build-release.yaml
+++ b/.github/workflows/build-release.yaml
@@ -24,6 +24,10 @@ jobs:
         run: |
           # this is a special gradle task for building release bundles see build.gradle.kts
           ./gradlew clean createReleaseBundle
+      
+      - name: Hash Artifacts
+        id: hash
+        run: |
           cd build/release
           echo "::set-output name=hashes::$(sha256sum ./* | base64 -w0)"
           sha256sum ./*
