--- a/.github/workflows/build-release.yaml
+++ b/.github/workflows/build-release.yaml
@@ -1,25 +1,62 @@
-name: Build Release
+name: Tag and Build Release
 on:
   workflow_dispatch:
+    inputs:
+      release_version:
+        description: new release version
+        required: true
+        default: (for example, 0.1.0)
 
 jobs:
-  build:
+  check-inputs:
     runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/v')
+    steps:
+      - name: Check inputs
+        run: |
+          if [[ ! "${{ github.event.inputs.release_version }}" =~ ^[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
+            echo 'version "${{ github.event.inputs.release_version }}" not in ###.###.### format'
+            exit 1
+          fi
+  
+      - name: Check out main
+        uses: actions/checkout@v3
+        
+      - name: ci
+        uses: ./.github/workflows/ci.yaml
+        
+  create-tag:
+    needs: [check-inputs]
+    runs-on: ubuntu-latest
     permissions:
-      actions: read # To read the workflow path.
-      contents: write # To add assets to a release.
+      contents: write
+    steps:
+      - name: tag
+        uses: actions/github-script@v5
+        with:
+          script: |
+            github.rest.git.createRef({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              ref: "refs/tags/v${{ github.event.inputs.version }}",
+              sha: context.sha
+            })
+            
+  build-release:
+    runs-on: ubuntu-latest
+    needs: [create-tag]
     outputs:
       hashes: ${{ steps.hash.outputs.hashes }}
-    steps:
-      - name: Check out code
+    steps:        
+      - name: checkout tag
         uses: actions/checkout@v3
+        ref: "refs/tags/v${{ github.event.inputs.version }}"
+        
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
           java-version: 11
           distribution: 'temurin'
-
+          
       - name: Build project
         run: |
           # this is a special gradle task for building release bundles see build.gradle.kts
@@ -39,11 +76,12 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           draft: true
+          tag-name: v${{ github.event.inputs.version }}
           body: See [CHANGELOG.md](https://github.com/$GITHUB_REPOSITORY/CHANGELOG.md) for more details.
           files: ./build/release/*
 
   provenance:
-    needs: [build]
+    needs: [build-release]
     permissions:
       actions: read # To read the workflow path.
       id-token: write # To sign the provenance.
@@ -51,4 +89,19 @@ jobs:
     uses: slsa-framework/slsa-github-generator/.github/workflows/generator_generic_slsa3.yml@v1.2.0
     with:
       base64-subjects: "${{ needs.build.outputs.hashes }}"
-      upload-assets: true # Optional: Upload to a new release
+      
+  upload-provenance:
+    runs-on: ubuntu-latest
+    needs: [provenance]
+    permissions:
+      contents: write
+    steps:
+      - name: Download attestation
+        uses: actions/download-artifact@v3
+        with:
+          name: "${{ needs.provenance.outputs.attestation-name }}"
+      - name: Append attestation to release
+        uses: softprops/action-gh-release@v0.1.14
+        with:
+          tag-name: v${{ github.event.inputs.version }}
+          files: "${{ needs.provenance.outputs.attestation-name }}"
