--- a/.github/workflows/build-release.yaml
+++ b/.github/workflows/build-release.yaml
@@ -49,7 +49,8 @@ jobs:
     steps:        
       - name: checkout tag
         uses: actions/checkout@v3
-        ref: "refs/tags/v${{ github.event.inputs.version }}"
+        with:
+          ref: "refs/tags/v${{ github.event.inputs.version }}"
         
       - name: Set up JDK 11
         uses: actions/setup-java@v2
