--- a/.github/workflows/build-release.yaml
+++ b/.github/workflows/build-release.yaml
@@ -33,7 +33,7 @@ jobs:
             github.rest.git.createRef({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              ref: "refs/tags/v${{ github.event.inputs.version }}",
+              ref: "refs/tags/v${{ github.event.inputs.release_version }}",
               sha: context.sha
             })
             
@@ -46,7 +46,7 @@ jobs:
       - name: checkout tag
         uses: actions/checkout@v3
         with:
-          ref: "refs/tags/v${{ github.event.inputs.version }}"
+          ref: "refs/tags/v${{ github.event.inputs.release_version }}"
         
       - name: Set up JDK 11
         uses: actions/setup-java@v2
@@ -73,7 +73,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           draft: true
-          tag_name: v${{ github.event.inputs.version }}
+          tag_name: v${{ github.event.inputs.release_version }}
           body: See [CHANGELOG.md](https://github.com/$GITHUB_REPOSITORY/CHANGELOG.md) for more details.
           files: ./build/release/*
 
