--- a/.github/workflows/build-release.yaml
+++ b/.github/workflows/build-release.yaml
@@ -37,7 +37,7 @@ jobs:
               sha: context.sha
             })
             
-  build-release:
+  build:
     runs-on: ubuntu-latest
     needs: [create-tag]
     outputs:
@@ -66,30 +66,26 @@ jobs:
           echo "::set-output name=hashes::$(sha256sum ./* | base64 -w0)"
           sha256sum ./*
 
-      - name: Draft GitHub release
-        uses: softprops/action-gh-release@v1
-        id: create-release
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Upload build artifacts
+        uses: actions/upload-artifact@3cea5372237819ed00197afe530f5a7ea3e805c8 # tag=v3.1.0
         with:
-          draft: true
-          tag_name: v${{ github.event.inputs.release_version }}
-          body: See [CHANGELOG.md](https://github.com/$GITHUB_REPOSITORY/CHANGELOG.md) for more details.
-          files: ./build/release/*
+          name: project-release-artifacts
+          path: ./build/release/
+          if-no-files-found: error
 
   provenance:
-    needs: [build-release]
+    needs: [build]
     permissions:
       actions: read # To read the workflow path.
       id-token: write # To sign the provenance.
       contents: write # To add assets to a release.
     uses: slsa-framework/slsa-github-generator/.github/workflows/generator_generic_slsa3.yml@v1.2.0
     with:
-      base64-subjects: "${{ needs.build-release.outputs.hashes }}"
+      base64-subjects: "${{ needs.build.outputs.hashes }}"
       
-  upload-provenance:
+  create-release:
     runs-on: ubuntu-latest
-    needs: [provenance]
+    needs: [provenance, build]
     permissions:
       contents: write
     steps:
@@ -97,9 +93,16 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: "${{ needs.provenance.outputs.attestation-name }}"
-      - name: Append attestation to release
+      - name: Download gradle release artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: project-release-artifacts
+      - name: Create draft release
         uses: softprops/action-gh-release@v1
         with:
           tag_name: v${{ github.event.inputs.release_version }}
-          files: "${{ needs.provenance.outputs.attestation-name }}"
+          body: See [CHANGELOG.md](https://github.com/$GITHUB_REPOSITORY/CHANGELOG.md) for more details.
+          files: |
+            "${{ needs.provenance.outputs.attestation-name }}"
+            ./build/release/*
           draft: true
